--- a/admin/menu/list.html
+++ b/admin/menu/list.html
@@ -8,20 +8,20 @@
 <body>
     <!-- ====header========================================= -->
     <div>
-     <div>Ncafe</div>
+     <h1>Ncafe</h1>
      <div>공유</div>
     </div>
     <!-- ======main========================================= -->
     <div>
-      <div>등록된 메뉴</div>
+      <h2>등록된 메뉴</h2>
       <!-- ===메뉴 검색 폼===================== -->
          <div>    
              <div>메뉴 검색폼</div>
-             <div>메뉴 검색</div>
+             <h3>메뉴 검색</h3>
          </div>
      <!-- ===카테고리 목록===================== -->
          <div>
-            <div>카테고리 목록</div>
+            <h3>카테고리 목록</h3>
                  <div>커피</div>
                  <div>논커피</div>
                  <div>티/차</div>
@@ -32,7 +32,7 @@
          </div>
      <!-- ===메뉴===================== -->
          <div>
-             <div>메뉴목록</div>
+             <h3>메뉴목록</h3>
                 <div>                
                      <!-- 아메뤼카노 -->
                     <div>
