--- a/admin/menu/list.html
+++ b/admin/menu/list.html
@@ -7,57 +7,88 @@
 </head>
 <body>
     <!-- ====header========================================= -->
-    <div>
+    <header>
      <h1>Ncafe</h1>
      <div>공유</div>
-    </div>
+    </header>
     <!-- ======main========================================= -->
-    <div>
-      <h2>등록된 메뉴</h2>
+    <main>
+    <section>
+      <h1>등록된 메뉴</h1>
       <!-- ===메뉴 검색 폼===================== -->
-         <div>  
-             <h3>메뉴 검색</h3>
+         <section>  
+             <h1>메뉴 검색</h1>
              <div>메뉴 검색폼</div>
-         </div>
+         </section>
      <!-- ===카테고리 목록===================== -->
-         <div>
-            <h3>카테고리 목록</h3>
-                 <div>커피</div>
-                 <div>논커피</div>
-                 <div>티/차</div>
-                 <div>에이드</div>
-                 <div>주스/스무디</div>
-                 <div>아이스크림</div>
-                 <div>베이커리</div>
-         </div>
+         <section>
+            <h1>카테고리 목록</h1>
+             <ul>
+                 <li>커피</li>
+                 <li>논커피</li>
+                 <li>티/차</li>
+                 <li>에이드</li>
+                 <li>주스/스무디</li>
+                 <li>아이스크림</li>
+                 <li>베이커리</li>
+             </ul>
+         </section>
      <!-- ===메뉴===================== -->
-         <div>
-             <h3>메뉴목록</h3>
-                <div>                
+         <section>
+             <h1>메뉴목록</h1>                
                      <!-- 아메뤼카노 -->
-                    <div>
-                        <div>사진</div>               
-                        <div>아메리카노</div>                  
-                        <div>230ml</div>                     
-                        <div>4,500원</div>                    
-                        <div>수정</div>
-                    </div>
+                    <ul>                
+                        <li>사진</li>               
+                        <li>아메리카노</li>                  
+                        <li>230ml</li>                     
+                        <li>4,500원</li>                    
+                        <li>수정</li>
+                    </ul>
                     <!-- 캐푸치노우 -->
-                    <div>
-                        <div>사진</div>                    
-                        <div>카푸치노</div>                     
-                        <div>230ml</div>                   
-                        <div>5,500원</div>
-                        <div>수정</div>
-                    </div>
-                </div>
-         </div>
-    </div> 
+                    <ul>
+                        <li>사진</li>                    
+                        <li>카푸치노</li>                     
+                        <li>230ml</li>                   
+                        <li>5,500원</li>
+                        <li>수정</li>
+                    </ul>
+         </section>
+    </section> 
+    </main>
+    <aside>
+        <h1>바로가기메뉴</h1>
+        <ul>
+            <li>대시보드</li>
+            <li>메뉴목록</li>
+            <li>메뉴추가</li>
+        </ul>
+    </aside>
     <!-- ======footer======================================== -->
-    <div>
-     <div>대시보드</div>
-     <div>커피목록</div>
-     <div>커피등록</div>
-    </div>
+    <footer>
+     <section>
+       <h1>사이트 정보</h1>
+         <div>
+            <section>>      
+                <h1>회사정보</h1>
+                <dl>
+                    <dt>상호</dt><dd>뉴카페</dd>
+                    <dt>사업자등록번호</dt><dd>123-45-67890</dd>
+                    <dt>대표</dt><dd>뉴렉처</dd>
+                </dl>
+            </section>
+            <section>
+                <h1>연락처</h1>
+                <dl>
+                    <dt>주소</dt>
+                    <dd>서울시 강남구 역삼동 123-45</dd>
+                    <dt>전화</dt>
+                    <dd>02-1234-5678</dd>
+                    <dt>이메일</dt>
+                    <dd>newcafe@newcafe.com</dd>
+                </dl>
+            </section>
+         </div>
+      </section>
+    </footer>
 </body>
 </html>
